# haskell-invertible-syntax-poly

./: LICENSE  invertible-syntax-poly.cabal
debian/: changelog  control  rules
example/: JsonData.hs  json.hs
src/Control/Isomorphism/Partial/: Ext.hs  Functors.hs
src/Control/Isomorphism/Partial/Ext/: Constructors.hs  Data.hs  Prim.hs
src/Text/Syntax/: Poly.hs
src/Text/Syntax/Check/: Prim.hs
src/Text/Syntax/Parser/: EList.hs  Instances.hs  List.hs  ReadP.hs
src/Text/Syntax/Parser/List/: Compose.hs  Lazy.hs  LazyMaybe.hs  Strict.hs  StrictMaybe.hs  Type.hs
src/Text/Syntax/Poly/: Check.hs  Class.hs  Combinators.hs  Instances.hs  Type.hs
src/Text/Syntax/Poly/Combinators/: Char.hs
src/Text/Syntax/Poly/Parser/: List.hs  ReadP.hs
src/Text/Syntax/Poly/Printer/: List.hs
src/Text/Syntax/Printer/: List.hs
