Name:                invertible-syntax-poly
Version:             0.1.0.0
Synopsis:            Extension of invertible-syntax library.
Description:         Extends invertible-syntax library
                     capable to use parameterized token type.
Homepage:            http://twitter.com/khibino
License:             BSD3
License-file:        LICENSE
Author:              Kei Hibino <ex8k.hibino@gmail.com>
Maintainer:          Kei Hibino <ex8k.hibino@gmail.com>
Category:            Text
Stability:           experimental
Build-type:          Simple
Cabal-version:       >=1.2

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

Library
  Hs-source-dirs:       src
  -- Modules exported by the library.
  Exposed-modules:
                        Control.Isomorphism.Partial.Ext.Prim
                        Control.Isomorphism.Partial.Ext.Constructors
                        Control.Isomorphism.Partial.Ext
                        Text.Syntax.Poly.Class
                        Text.Syntax.Poly.Type
                        Text.Syntax.Poly.Instances
                        Text.Syntax.Poly.Combinators
                        Text.Syntax.Poly.Combinators.Char
                        Text.Syntax.Poly
                        Text.Syntax.Poly.Parser.List
                        Text.Syntax.Poly.Parser.ReadP
                        Text.Syntax.Poly.Printer.List
                        Text.Syntax.Poly.Check
                        -- Text.Syntax.Parser.ReadP
  
  -- Packages needed in order to build this package.
  Build-depends:         base < 5
                       , partial-isomorphisms
  --                     , invertible-syntax
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Build-tools:         


source-repository head
  type:     git
  location: https://github.com/khibino/haskell-invertible-syntax-poly

source-repository head
  type:     mercurial
  location: https://bitbucket.org/khibino/haskell-invertible-syntax-poly
