name:                invertible-syntax-poly
version:             0.1.0.0
synopsis:            Extends invertible-syntax library
                     capable to use parameterized token type.
description:         Extends invertible-syntax library
                     capable to use parameterized token type.
homepage:            http://twitter.com/khibino
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino <ex8k.hibino@gmail.com>
maintainer:          Kei Hibino <ex8k.hibino@gmail.com>
category:            Text
stability:           experimental
build-type:          Simple
cabal-version:       >=1.2

library
  hs-source-dirs:       src
  exposed-modules:
                        Control.Isomorphism.Partial.Ext.Prim
                        Control.Isomorphism.Partial.Ext.Constructors
                        Control.Isomorphism.Partial.Ext
                        Text.Syntax.Poly.Class
                        Text.Syntax.Poly.Type
                        Text.Syntax.Poly.Instances
                        Text.Syntax.Poly.Combinators
                        Text.Syntax.Poly.Combinators.Char
                        Text.Syntax.Poly
                        Text.Syntax.Parser.Instances
                        Text.Syntax.Parser.List.Compose
                        Text.Syntax.Parser.List.Lazy
                        Text.Syntax.Parser.List.LazyMaybe
                        Text.Syntax.Parser.List.Strict
                        Text.Syntax.Parser.List.StrictMaybe
                        Text.Syntax.Parser.ReadP
                        Text.Syntax.Printer.List
                        Text.Syntax.Check.Prim
  
  build-depends:        base < 5
                      , partial-isomorphisms
  

source-repository head
  type:     git
  location: https://github.com/khibino/haskell-invertible-syntax-poly

source-repository head
  type:     mercurial
  location: https://bitbucket.org/khibino/haskell-invertible-syntax-poly
